--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-    mappings channel: 'parchment', version: '2021.12.19-1.18.1'
+    mappings channel: 'parchment', version: '2022.07.17-1.18.2'
     
     runs {
         client {
@@ -91,8 +91,9 @@ repositories {
     maven {
         // location of a maven mirror for JEI files, as a fallback
         name = "ModMaven"
-        url = "https://modmaven.k-4u.nl"
+        url = "https://modmaven.dev"
     }
+    mavenLocal() // For mapperbase
 }
 
 dependencies {
@@ -102,7 +103,8 @@ dependencies {
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
     runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
     
-    implementation files("dep/mapperbase-${mc_version}-${base_version}-deobf.jar")
+    implementation "tv.mapper.mapperbase:mapperbase:${mc_version}-${base_version}"
+
 }
 
 jar {
