--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,6 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.dev"
     }
-    mavenLocal() // For mapperbase
 }
 
 dependencies {
@@ -102,8 +101,8 @@ dependencies {
     // JEI
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
     runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
-    
-    implementation "tv.mapper.mapperbase:mapperbase:${mc_version}-${base_version}"
+
+    implementation files("dep/mapperbase-${mc_version}-${base_version}-deobf.jar")
 
 }
 
